<?xml version="1.0"?>
<package>
  <name>roswifibot</name>
  <version>0.0.1</version>
  <description>ROS wifibot driver package</description>

  <author>wifibot</author>
  <maintainer email="roswifibot@roswifibot.com">wifibot</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/roswifibot</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


